# MintTechBot

./: .env.example  .gitignore  CHECKPOINT.md  CUSTOM_EMOJIS.md  DEPLOYMENT.md  ENHANCED_NOTIFICATIONS_SUMMARY.md  OPENSEA_IMAGE_SUPPORT_SUMMARY.md  OPENSEA_IMPLEMENTATION_REPORT.md  OPENSEA_NOTIFICATION_FIXES.md  OPENSEA_OFFICIAL_PAYLOADS.json  OPENSEA_PAYLOAD_FIXES_SUMMARY.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SMART_CONTRACT_SETUP.md  SimplePaymentReceiver_ABI.json  add-contract-image-payment.js  add-mongs-image-payment.js  bot_startup_logs.txt  byte  check-all-users.js  check-database-cleanup.js  check-db-schema.js  check-image-fee-status.js  check-image-payment.js  check-mongs-image-payment.js  check-poller-status.js  check-token-status.js  cleanup-test-data.js  clear-all-users.js  clear-database-preserve-mong-only.js  clear-database.js  clear-mongs-data.js  clear-test-image-fee.js  complete-database-wipe.js  create-ordinals-chainhook.js  database-cleanup.js  database.sqlite  debug-mongs-issue.js  debug-opensea-mapping.js  (+30 more)
contracts/: MockERC20.sol  MongsInspiredNFT.sol  SimpleNFT.sol  SimplePaymentReceiver.sol  TrendingPayment.sol
deploy/: verify-ronin.js
migrations/: 001-add-helius-support.sql
payment_receiver/: .gitignore  Anchor.toml  DEPLOYMENT.md  INSTALL_COMPLETE.md  QUICKSTART.md  README.md  deploy.sh  install-fedora.sh  package.json
payment_receiver/programs/payment_receiver/: Cargo.toml
payment_receiver/programs/payment_receiver/src/: lib.rs
scripts/: check_channels.js  check_subscriptions.js  check_token_tier.js  deploy-minttechbot.js  (+5 more)
(+35 files in other folders)
