[package]
name = "payment-receiver"
version = "0.1.0"
description = "Simple SOL payment receiver program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_receiver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
